TESTING.md - Add a further squashed bug to the bug section of Manual Testing, and add a Known bug table to the same section

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,13 +68,6 @@ tbody {
     overflow-y: scroll;
 }
 
-/* style Register fields */
-
-/* .container .text-center {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} */
 
 /* footer */
 .footer {
@@ -84,23 +77,21 @@ tbody {
     height: 100px;
 } 
 
-  
-/* from Bootstrap */
-
+ 
 /* Small devices  */
 
 @media screen and (max-width: 600px) {
     
 
-    table {width:100%;}
+    table {width: 100%;}
     thead {display: none;}
     tr:nth-of-type(2n) {background-color: inherit;}
-    tr td:first-child {background: #f0f0f0; font-weight:bold;font-size:1.3em;}
-    tbody td {display: block;  text-align:center;}
+    tr td:first-child {background: #f0f0f0; font-weight: bold;font-size: 1.3em;}
+    tbody td {display: block;  text-align: center;}
     tbody td:before { 
         content: attr(data-th); 
         display: block;
-        text-align:center;  
+        text-align: center;  
     }
  }
 
